--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "type": "module",
-  "description": "Your Travel Guide to China: By Locals",
+  "description": "Your China Travel Guide with Local Tips",
   "repository": "https://github.com/nihao-wiki/nihao/",
   "license": "MIT",
   "scripts": {
