--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "vitepress": "^1.3.1",
     "vue": "^3.2.47",
     "vue-eslint-parser": "^9.1.0"
+  },
+  "dependencies": {
+    "pinyin": "3.1.0"
   }
 }
